force-app/main/default/objects/Work_Order_Line_Item__c/Work_Order_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Work Order Line Item</label>
    <nameField>
        <displayFormat>WOLI-{000000}</displayFormat>
        <label>Work Order Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>