force-app/main/default/objects/Work_Order_Line_Item__c/fields/Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Line_Type__c</fullName>
    <description>Whether this is a service or a product</description>
    <inlineHelpText>Select the type of line.</inlineHelpText>
    <label>Line Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Line_Type</valueSetName>
    </valueSet>
</CustomField>