force-app/main/default/objects/Work_Order_Line_Item__c/fields/Net_Line_Total__c.field-meta.xml
<CustomField>
    <fullName>Net_Line_Total__c</fullName>
    <description>Net amount</description>
    <formula>Quantity__c  *  Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Line Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>