force-app/main/default/objects/Work_Order_Line_Item__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Applicable if LineType is set to Service.</inlineHelpText>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Work Order Line Items</relationshipLabel>
    <relationshipName>Work_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>